--- a/env.example
+++ b/env.example
@@ -1,5 +1,10 @@
 # Database configuration
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/cim_wizard_integrated
+# Default: Uses Docker PostGIS container
+DATABASE_URL=postgresql://cim_wizard_user:cim_wizard_password@localhost:5432/cim_wizard_integrated
+
+# Alternative configurations (uncomment to use):
+# Local PostgreSQL: postgresql://postgres:postgres@localhost:5432/cim_wizard_integrated
+# Custom server: postgresql://username:password@host:port/database
 
 # Application settings
 DEBUG=True
@@ -15,12 +20,19 @@ VERSION=2.0.0
 # CORS settings
 BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8000"]
 
-# PostgreSQL specific
+# Docker PostGIS configuration (recommended)
 POSTGRES_SERVER=localhost
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_USER=cim_wizard_user
+POSTGRES_PASSWORD=cim_wizard_password
 POSTGRES_DB=cim_wizard_integrated
 POSTGRES_PORT=5432
+
+# Local PostgreSQL fallback (commented)
+# POSTGRES_SERVER=localhost
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=postgres
+# POSTGRES_DB=cim_wizard_integrated
+# POSTGRES_PORT=5432
 
 # Service configuration (now integrated, no external URLs needed)
 CENSUS_SERVICE=integrated
