--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,75 +1,61 @@
+# Development Docker Compose - PostGIS Only
+# This configuration runs only the PostGIS database for local development
+# Application code runs locally and connects to this containerized database
+
 version: '3.8'
 
 services:
-  # PostgreSQL with PostGIS (Custom Build)
-  postgres:
+  # PostgreSQL with PostGIS for Development
+  postgis:
     build:
-      context: ./docker/postgis
-      dockerfile: Dockerfile
-    container_name: cim_integrated_db
+      context: .
+      dockerfile: Dockerfile.postgis
+    container_name: cim_wizard_postgis_dev
     environment:
-      POSTGRES_DB: cim_wizard_integrated
-      POSTGRES_USER: cim_wizard_user
-      POSTGRES_PASSWORD: cim_wizard_password
+      POSTGRES_DB: ${POSTGRES_DB:-cim_wizard_integrated}
+      POSTGRES_USER: ${POSTGRES_USER:-cim_wizard_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-cim_wizard_password}
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT:-5432}:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./docker/postgis/init-scripts:/docker-entrypoint-initdb.d:ro
+      - postgis_data_dev:/var/lib/postgresql/data
+      - ./init-scripts:/docker-entrypoint-initdb.d:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U cim_wizard_user -d cim_wizard_integrated"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-cim_wizard_user} -d ${POSTGRES_DB:-cim_wizard_integrated}"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 60s
     networks:
-      - cim_network
+      - cim_dev_network
 
-  # CIM Wizard Integrated Application
-  cim_wizard:
-    build: .
-    container_name: cim_integrated_app
-    environment:
-      DATABASE_URL: postgresql://cim_wizard_user:cim_wizard_password@postgres:5432/cim_wizard_integrated
-      DEBUG: ${DEBUG:-False}
-      LOG_LEVEL: ${LOG_LEVEL:-info}
-    ports:
-      - "8000:8000"
-    depends_on:
-      postgres:
-        condition: service_healthy
-    volumes:
-      - ./app:/app/app
-      - ./main.py:/app/main.py
-      - ./run.py:/app/run.py
-    networks:
-      - cim_network
-
-  # pgAdmin for database management
+  # pgAdmin for database management (optional, comment out if not needed)
   pgadmin:
     image: dpage/pgadmin4:latest
-    container_name: cim_integrated_pgadmin
+    container_name: cim_wizard_pgadmin_dev
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@cimwizard.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@cimwizard.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     ports:
-      - "5050:80"
+      - "${PGADMIN_PORT:-5050}:80"
     depends_on:
-      - postgres
+      - postgis
     volumes:
-      - pgadmin_data:/var/lib/pgadmin
+      - pgadmin_data_dev:/var/lib/pgadmin
     networks:
-      - cim_network
-
-
+      - cim_dev_network
+    profiles:
+      - tools
 
 volumes:
-  postgres_data:
-  pgadmin_data:
+  postgis_data_dev:
+    name: cim_wizard_postgis_data_dev
+  pgadmin_data_dev:
+    name: cim_wizard_pgadmin_data_dev
 
 networks:
-  cim_network:
-    name: cim_integrated_network
+  cim_dev_network:
+    name: cim_wizard_dev_network
     driver: bridge
