--- a/environment.yml
+++ b/environment.yml
@@ -1,78 +1,72 @@
-name: cim_wizard_integrated
+name: webgis
 channels:
-  - defaults
   - conda-forge
+  - defaults
 dependencies:
   # Python
-  - python=3.10
+  - python>=3.10,<3.12
   
-  # Database
-  - postgresql=15.7
-  - psycopg2=2.9.7
-  - sqlalchemy=2.0.23
-  - alembic=1.12.1
+  # Core geospatial libraries (main requirements)
+  - gdal>=3.6.0
+  - geos>=3.11.0
+  - proj>=9.1.0
+  - shapely>=2.0.0
+  - fiona>=1.9.0
+  - pyproj>=3.5.0
+  - rtree>=1.0.0
   
-  # Geospatial
-  - gdal=3.6.2
-  - geos=3.11.1
-  - proj=9.1.1
-  - shapely=2.0.1
-  - geopandas=1.0.1
-  - fiona=1.9.1
-  - pyproj=3.5.0
-  - rtree=1.4.0
-  
-  # FastAPI and web
-  - fastapi=0.104.1
-  - uvicorn=0.24.0
-  - python-multipart=0.0.6
-  - python-dotenv=1.0.0
+  # FastAPI and web (main requirements)
+  - fastapi>=0.100.0
+  - uvicorn>=0.20.0
+  - python-multipart
+  - python-dotenv
   
   # Data processing
-  - pandas=2.2.3
-  - numpy=1.26.4
-  - scipy=1.15.2
-  - scikit-learn=1.6.1
+  - pandas>=2.0.0
+  - numpy>=1.24.0
+  - scipy>=1.10.0
+  - scikit-learn>=1.3.0
   
-  # HTTP client
-  - requests=2.32.3
-  - httpx=0.25.2
-  - aiofiles=23.2.1
-  
-  # Utilities
-  - pydantic=2.5.2
-  - pyyaml=6.0.2
-  - python-json-logger=2.0.7
-  
-  # pip dependencies
+  # Basic utilities
+  - pyyaml
+  - requests
   - pip
+  
+  # pip dependencies (packages that work better via pip)
   - pip:
-      # Database extensions
-      - geoalchemy2==0.14.2
-      - asyncpg==0.29.0
+      # Database
+      - sqlalchemy>=2.0.0
+      - alembic>=1.10.0
+      - psycopg2-binary>=2.9.0
+      - geoalchemy2>=0.14.0
+      - asyncpg>=0.28.0
       
-      # Geospatial
-      - geojson-pydantic==1.0.1
-      - osmnx==2.0.0
-      - pyogrio==0.11.0
+      # Geospatial extensions
+      - geopandas>=1.0.0
+      - geojson-pydantic>=1.0.0
+      - osmnx>=2.0.0
+      - pyogrio>=0.10.0
       
       # FastAPI extensions
-      - fastapi-pagination==0.12.13
-      - slowapi==0.1.9
-      - fastapi-utils==0.2.1
+      - fastapi-pagination>=0.12.0
+      - slowapi>=0.1.0
+      - fastapi-utils>=0.2.0
+      - pydantic>=2.5.0
       
-      # Testing
-      - pytest==7.4.3
-      - pytest-asyncio==0.21.1
-      - pytest-cov==4.1.0
-      - httpx==0.25.2
+      # HTTP and async
+      - httpx>=0.25.0
+      - aiofiles>=23.0.0
       
-      # Development
-      - black==23.11.0
-      - flake8==6.1.0
-      - mypy==1.7.1
-      - types-requests==2.31.0.10
+      # Development and testing
+      - pytest>=7.0.0
+      - pytest-asyncio>=0.21.0
+      - pytest-cov>=4.0.0
+      - black>=23.0.0
+      - flake8>=6.0.0
+      - mypy>=1.7.0
+      - types-requests>=2.31.0
+      - python-json-logger>=2.0.0
 
 variables:
-  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/cim_wizard_integrated
+  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/webgis
   PYTHONPATH: .
