--- a/environment.yml
+++ b/environment.yml
@@ -3,70 +3,195 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  # Python
-  - python>=3.10,<3.12
-  
-  # Core geospatial libraries (main requirements)
-  - gdal>=3.6.0
-  - geos>=3.11.0
-  - proj>=9.1.0
-  - shapely>=2.0.0
-  - fiona>=1.9.0
-  - pyproj>=3.5.0
-  - rtree>=1.0.0
-  
-  # FastAPI and web (main requirements)
-  - fastapi>=0.100.0
-  - uvicorn>=0.20.0
-  - python-multipart
-  - python-dotenv
-  
-  # Data processing
-  - pandas>=2.0.0
-  - numpy>=1.24.0
-  - scipy>=1.10.0
-  - scikit-learn>=1.3.0
-  
-  # Basic utilities
-  - pyyaml
-  - requests
-  - pip
-  
-  # pip dependencies (packages that work better via pip)
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - annotated-types=0.7.0=pyhd8ed1ab_1
+  - anyio=4.10.0=pyhe01879c_0
+  - attrs=25.3.0=pyh71513ae_0
+  - blosc=1.21.6=he440d0b_1
+  - brotli-python=1.1.0=py311hfdbb021_3
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.34.5=hb9d3cd8_0
+  - ca-certificates=2025.8.3=hbd8a1cb_0
+  - certifi=2025.8.3=pyhd8ed1ab_0
+  - cffi=1.17.1=py311hf29c0ef_0
+  - charset-normalizer=3.4.3=pyhd8ed1ab_0
+  - click=8.2.1=pyh707e725_0
+  - click-plugins=1.1.1.2=pyhd8ed1ab_0
+  - cligj=0.7.2=pyhd8ed1ab_2
+  - dnspython=2.7.0=pyhff2d567_1
+  - email-validator=2.2.0=pyhd8ed1ab_1
+  - email_validator=2.2.0=hd8ed1ab_1
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - fastapi=0.116.1=h26c32bb_1
+  - fastapi-cli=0.0.8=pyhd8ed1ab_0
+  - fastapi-core=0.116.1=pyhe01879c_1
+  - fiona=1.10.1=py311hf6089d3_3
+  - freexl=2.0.0=h9dce30a_2
+  - gdal=3.10.3=py311h34ccccb_12
+  - geos=3.13.1=h97f6797_0
+  - geotiff=1.7.4=h239500f_2
+  - giflib=5.2.2=hd590300_0
+  - h11=0.16.0=pyhd8ed1ab_0
+  - h2=4.2.0=pyhd8ed1ab_0
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - httpcore=1.0.9=pyh29332c3_0
+  - httptools=0.6.4=py311h9ecbd09_0
+  - httpx=0.28.1=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=75.1=he02047a_0
+  - idna=3.10=pyhd8ed1ab_1
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - joblib=1.5.1=pyhd8ed1ab_0
+  - json-c=0.18=h6688a6e_0
+  - keyutils=1.6.3=hb9d3cd8_0
+  - krb5=1.21.3=h659f571_0
+  - ld_impl_linux-64=2.44=h1423503_1
+  - lerc=4.0.0=h0aef613_1
+  - libarchive=3.8.1=gpl_h98cc613_100
+  - libblas=3.9.0=34_h59b9bed_openblas
+  - libcblas=3.9.0=34_he106b2a_openblas
+  - libcurl=8.14.1=h332b0f4_0
+  - libdeflate=1.24=h86f0d12_0
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libev=4.33=hd590300_2
+  - libexpat=2.7.1=hecca717_0
+  - libffi=3.4.6=h2dba641_1
+  - libgcc=15.1.0=h767d61c_4
+  - libgcc-ng=15.1.0=h69a702a_4
+  - libgdal-core=3.10.3=h02f45b3_12
+  - libgfortran=15.1.0=h69a702a_4
+  - libgfortran5=15.1.0=hcea5267_4
+  - libgomp=15.1.0=h767d61c_4
+  - libiconv=1.18=h3b78370_2
+  - libjpeg-turbo=3.1.0=hb9d3cd8_0
+  - libkml=1.3.0=hf539b9f_1021
+  - liblapack=3.9.0=34_h7ac8fdf_openblas
+  - liblzma=5.8.1=hb9d3cd8_2
+  - libnghttp2=1.64.0=h161d5f1_0
+  - libnsl=2.0.1=hb9d3cd8_1
+  - libopenblas=0.3.30=pthreads_h94d23a6_2
+  - libpng=1.6.50=h421ea60_1
+  - librttopo=1.1.0=hd718a1a_18
+  - libspatialindex=2.1.0=he57a185_0
+  - libspatialite=5.1.0=he17ca71_14
+  - libsqlite=3.50.4=h0c1763c_0
+  - libssh2=1.11.1=hcf80075_0
+  - libstdcxx=15.1.0=h8f9b012_4
+  - libstdcxx-ng=15.1.0=h4852527_4
+  - libtiff=4.7.0=h8261f1e_6
+  - libuuid=2.38.1=h0b41bf4_0
+  - libuv=1.51.0=hb03c661_1
+  - libwebp-base=1.6.0=hd42ef1d_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.13.8=h04c0eec_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - lz4-c=1.10.0=h5888daf_1
+  - lzo=2.10=h280c20c_1002
+  - markdown-it-py=4.0.0=pyhd8ed1ab_0
+  - markupsafe=3.0.2=py311h2dc5d0c_1
+  - mdurl=0.1.2=pyhd8ed1ab_1
+  - minizip=4.0.10=h05a5f5f_0
+  - ncurses=6.5=h2d0b736_3
+  - numpy=2.3.2=py311h2e04523_0
+  - openssl=3.5.2=h26f9b46_0
+  - pandas=2.3.1=py311hed34c8f_0
+  - pcre2=10.45=hc749103_0
+  - pip=25.2=pyh8b19718_0
+  - proj=9.6.2=h18fbb6c_2
+  - pycparser=2.22=pyh29332c3_1
+  - pydantic=2.11.7=pyh3cfb1c2_0
+  - pydantic-core=2.33.2=py311hdae7d1d_0
+  - pygments=2.19.2=pyhd8ed1ab_0
+  - pyparsing=3.2.3=pyhe01879c_2
+  - pyproj=3.7.2=py311h9fec8c3_0
+  - pysocks=1.7.1=pyha55dd90_7
+  - python=3.11.13=h9e4cc4f_0_cpython
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
+  - python-dotenv=1.1.1=pyhe01879c_0
+  - python-multipart=0.0.20=pyhff2d567_0
+  - python-tzdata=2025.2=pyhd8ed1ab_0
+  - python_abi=3.11=8_cp311
+  - pytz=2025.2=pyhd8ed1ab_0
+  - pyyaml=6.0.2=py311h2dc5d0c_2
+  - readline=8.2=h8c095d6_2
+  - requests=2.32.5=pyhd8ed1ab_0
+  - rich=14.1.0=pyhe01879c_0
+  - rich-toolkit=0.15.0=pyhe01879c_0
+  - rtree=1.4.1=pyh11ca60a_0
+  - scikit-learn=1.7.1=py311hc3e1efb_0
+  - scipy=1.16.1=py311h33d6a90_0
+  - setuptools=80.9.0=pyhff2d567_0
+  - shapely=2.1.1=py311h3dc67b8_0
+  - shellingham=1.5.4=pyhd8ed1ab_1
+  - six=1.17.0=pyhe01879c_1
+  - snappy=1.2.2=h03e3b7b_0
+  - sniffio=1.3.1=pyhd8ed1ab_1
+  - sqlite=3.50.4=hbc0de68_0
+  - starlette=0.47.2=pyh82d4cca_0
+  - threadpoolctl=3.6.0=pyhecae5ae_0
+  - tk=8.6.13=noxft_hd72426e_102
+  - typer=0.16.1=pyhc167863_0
+  - typer-slim=0.16.1=pyhe01879c_0
+  - typer-slim-standard=0.16.1=h810d63d_0
+  - typing-extensions=4.14.1=h4440ef1_0
+  - typing-inspection=0.4.1=pyhd8ed1ab_0
+  - typing_extensions=4.14.1=pyhe01879c_0
+  - tzdata=2025b=h78e105d_0
+  - uriparser=0.9.8=hac33072_0
+  - urllib3=2.5.0=pyhd8ed1ab_0
+  - uvicorn=0.35.0=pyh31011fe_0
+  - uvicorn-standard=0.35.0=h31011fe_0
+  - uvloop=0.21.0=py311h9ecbd09_1
+  - watchfiles=1.1.0=py311h9e33e62_0
+  - websockets=15.0.1=py311haee01d2_1
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - xerces-c=3.2.5=h988505b_2
+  - yaml=0.2.5=h280c20c_3
+  - zlib=1.3.1=hb9d3cd8_2
+  - zstandard=0.23.0=py311h9ecbd09_2
+  - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      # Database
-      - sqlalchemy>=2.0.0
-      - alembic>=1.10.0
-      - psycopg2-binary>=2.9.0
-      - geoalchemy2>=0.14.0
-      - asyncpg>=0.28.0
-      
-      # Geospatial extensions
-      - geopandas>=1.0.0
-      - geojson-pydantic>=1.0.0
-      - osmnx>=2.0.0
-      - pyogrio>=0.10.0
-      
-      # FastAPI extensions
-      - fastapi-pagination>=0.12.0
-      - slowapi>=0.1.0
-      - fastapi-utils>=0.2.0
-      - pydantic>=2.5.0
-      
-      # HTTP and async
-      - httpx>=0.25.0
-      - aiofiles>=23.0.0
-      
-      # Development and testing
-      - pytest>=7.0.0
-      - pytest-asyncio>=0.21.0
-      - pytest-cov>=4.0.0
-      - black>=23.0.0
-      - flake8>=6.0.0
-      - mypy>=1.7.0
-      - types-requests>=2.31.0
-      - python-json-logger>=2.0.0
-
+      - aiofiles==24.1.0
+      - alembic==1.16.4
+      - asyncpg==0.30.0
+      - black==25.1.0
+      - coverage==7.10.4
+      - deprecated==1.2.18
+      - fastapi-pagination==0.13.3
+      - fastapi-utils==0.8.0
+      - flake8==7.3.0
+      - geoalchemy2==0.18.0
+      - geojson-pydantic==2.0.0
+      - geopandas==1.1.1
+      - greenlet==3.2.4
+      - iniconfig==2.1.0
+      - limits==5.5.0
+      - mako==1.3.10
+      - mccabe==0.7.0
+      - mypy==1.17.1
+      - mypy-extensions==1.1.0
+      - networkx==3.5
+      - osmnx==2.0.6
+      - packaging==25.0
+      - pathspec==0.12.1
+      - platformdirs==4.3.8
+      - pluggy==1.6.0
+      - psutil==5.9.8
+      - psycopg2-binary==2.9.10
+      - pycodestyle==2.14.0
+      - pydantic-settings==2.10.1
+      - pyflakes==3.4.0
+      - pyogrio==0.11.1
+      - pytest==8.4.1
+      - pytest-asyncio==1.1.0
+      - pytest-cov==6.2.1
+      - python-json-logger==3.3.0
+      - slowapi==0.1.9
+      - sqlalchemy==2.0.43
+      - types-requests==2.32.4.20250809
+      - wrapt==1.17.3
 variables:
   DATABASE_URL: postgresql://postgres:postgres@localhost:5432/webgis
   PYTHONPATH: .
+prefix: /home/ali/miniconda3/envs/webgis
