--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,61 @@
 # Core dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+python-multipart==0.0.20
+python-dotenv==1.1.1
+pydantic==2.11.7
+pydantic-settings==2.10.1
 
 # Database
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-alembic==1.12.1
-geoalchemy2==0.14.2
-asyncpg==0.29.0
+sqlalchemy==2.0.43
+psycopg2-binary==2.9.10
+alembic==1.16.4
+geoalchemy2==0.18.0
+asyncpg==0.30.0
 
-# Geospatial
-shapely==2.0.1
-geopandas==1.0.1
-geojson-pydantic==1.0.1
-pyproj==3.6.1
+# Geospatial libraries
+shapely==2.1.1
+geopandas==1.1.1
+geojson-pydantic==2.0.0
+pyproj==3.7.2
+fiona==1.10.1
+gdal==3.10.3
+osmnx==2.0.6
 
 # Data processing
-pandas==2.2.3
-numpy==1.26.4
+pandas==2.3.1
+numpy==2.3.2
+scipy==1.16.1
+scikit-learn==1.7.1
 
 # HTTP client
-requests==2.32.3
-httpx==0.25.2
-aiofiles==23.2.1
+requests==2.32.5
+httpx==0.28.1
+aiofiles==24.1.0
 
-# Utilities
-pydantic==2.5.2
-pyyaml==6.0.1
-python-json-logger==2.0.7
+# Configuration and utilities
+pyyaml==6.0.2
+python-json-logger==3.3.0
+jinja2==3.1.6
 
 # API extensions
-fastapi-pagination==0.12.13
+fastapi-pagination==0.13.3
 slowapi==0.1.9
-fastapi-utils==0.2.1
+fastapi-utils==0.8.0
+limits==5.5.0
+
+# Development and testing
+pytest==8.4.1
+pytest-asyncio==1.1.0
+pytest-cov==6.2.1
+black==25.1.0
+flake8==7.3.0
+mypy==1.17.1
+coverage==7.10.4
+
+# Additional utilities
+email-validator==2.2.0
+typer==0.16.1
+rich==14.1.0
+packaging==25.0
+networkx==3.5
